--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,9 @@
         android:label="Lie Flashcards"
         android:theme="@style/AppTheme.WithoutActionBar" >
         <activity
-            android:screenOrientation="portrait"
             android:name=".Activities.MainActivity"
             android:label="MainActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,74 +31,82 @@
             </intent-filter>
         </activity>
         <activity
-            android:screenOrientation="portrait"
             android:name=".Activities.DeckActivity"
-            android:label="@string/title_activity_deck" >
+            android:label="@string/title_activity_deck"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:screenOrientation="portrait"
             android:name=".Activities.AddCardActivity"
-            android:label="AddCardActivity" >
+            android:label="AddCardActivity"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:screenOrientation="portrait"
             android:name=".Activities.RegisterActivity"
-            android:label="RegisterActivity" >
+            android:label="RegisterActivity"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:screenOrientation="portrait"
             android:name=".Activities.StatisticsActivity"
             android:label="@string/title_activity_statistics"
-            android:parentActivityName=".Activities.MainActivity" >
+            android:parentActivityName=".Activities.MainActivity"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Activities.MainActivity" />
         </activity>
         <activity
-            android:screenOrientation="portrait"
             android:name=".Activities.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName=".Activities.MainActivity" >
+            android:parentActivityName=".Activities.MainActivity"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Activities.MainActivity" />
         </activity>
         <activity
-            android:screenOrientation="portrait"
             android:name=".Activities.AddImageActivity"
-            android:label="@string/title_activity_add_image" >
+            android:label="@string/title_activity_add_image"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:screenOrientation="portrait"
             android:name=".Activities.AudioRecordActivity"
             android:label="@string/title_activity_audio_record"
-            android:parentActivityName=".Activities.AddCardActivity" >
+            android:parentActivityName=".Activities.AddCardActivity"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Activities.AddCardActivity" />
         </activity>
         <activity
-            android:screenOrientation="portrait"
             android:name=".Activities.PlayDeckActivity"
             android:label="@string/title_activity_play_deck"
-            android:parentActivityName=".Activities.DeckActivity" >
+            android:parentActivityName=".Activities.DeckActivity"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.raulvintila.app.lieflashcards.Activities.DeckActivity" />
         </activity>
         <activity
-            android:screenOrientation="portrait"
             android:name=".Activities.CardCollectionActivity"
             android:label="@string/title_activity_card_collection"
-            android:parentActivityName=".Activities.MainActivity" >
+            android:parentActivityName=".Activities.MainActivity"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.raulvintila.app.lieflashcards.Activities.MainActivity" />
         </activity>
         <activity
-            android:screenOrientation="portrait"
             android:name=".Activities.GoalsActivity"
             android:label="@string/title_activity_goals"
+            android:parentActivityName=".Activities.DeckActivity"
+            android:screenOrientation="portrait" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.raulvintila.app.lieflashcards.Activities.DeckActivity" />
+        </activity>
+        <activity
+            android:name=".Activities.DeckSettingsActivity"
+            android:label="@string/title_activity_deck_settings"
             android:parentActivityName=".Activities.DeckActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
