--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compile 'com.android.support:design:22.2.0'
     compile 'net.i2p.android.ext:floatingactionbutton:1.10.0'
     compile ('com.android.support:recyclerview-v7:22.+')
+    compile 'com.android.support:cardview-v7:22.+'
     compile 'com.afollestad:material-dialogs:0.7.6.0'
     compile 'com.google.code.gson:gson:2.3'
     compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
